# ai-agents-hub

./: .gitignore  CONTRIBUTING.md  README.md  lesson2.ipynb  programmatic_agent.py  pyproject.toml  requirements.txt
soccer-analytics-agent/: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
soccer-analytics-agent/backend/: main.py
soccer-analytics-agent/db/: schema.sql
soccer-analytics-agent/docs/: architecture.md
soccer-analytics-agent/frontend/: index.html  package-lock.json  package.json  vite.config.ts
soccer-analytics-agent/frontend/src/: App.tsx  api.ts  index.css
soccer-analytics-agent/frontend/src/components/: AnalyticsPanel.tsx  ChatColumn.tsx  Composer.tsx  EmptyHero.tsx  HealthPill.tsx  MessageBubble.tsx  ToolTrace.tsx
soccer-analytics-agent/frontend/src/components/viz/: EloGauges.tsx  FactList.tsx  (+7 more)
soccer-analytics-agent/frontend/src/lib/: analytics.ts  format.ts  types.ts
soccer-analytics-agent/scripts/: compute_elos.py  dev.sh  generate_documents.py  interactive_test.py  load_data.py  train_xgboost.py
soccer-analytics-agent/soccer_agent/: __init__.py  chat.py  cli.py  db.py  elo.py  embeddings.py  features.py  loop.py  memory.py  predictor.py  retrieval.py  team_names.py  tools.py  trace.py
soccer-analytics-agent/tests/: smoke_test.py  test_backend.py  test_chat.py  test_db.py  test_elo.py  test_embeddings.py  test_features.py  test_load_data.py  test_loop.py  test_memory.py  test_predictor.py  test_retrieval.py  test_team_names.py  test_tool_selection.py  test_tools.py  test_trace.py
(+75 files in other folders)
