[project]
name = "soccer-agent"
version = "0.1.0"
description = "Soccer analytics agent with a hand-written LLM tool loop"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "kagglehub>=0.3",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
markers = ["integration: requires the local Postgres container"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soccer_agent"]
